feat: xgboost model
-overfit but works (for now tree better)

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,14 @@ seaborn>=0.12.0
 jupyter>=1.0.0
 scipy>=1.10.0
 statsmodels>=0.13.0
+xgboost>=1.7.0
 
 # Core data analysis: pandas, numpy
 # Visualization: matplotlib, seaborn
-# Machine learning: scikit-learn, joblib
+# Machine learning: scikit-learn, joblib, xgboost
 # Statistics: scipy, statsmodels
 # Development: jupyter
 
 # run -> jupyter notebook in bash to start
+
+# .\.venv\Scripts\Activate.ps1
